Fixed alignment

--- a/css/searchBox.css
+++ b/css/searchBox.css
@@ -1,7 +1,4 @@
 body {
-	margin: 0;
-	padding: 0;
-	text-align: center;
 	/* background: #eee url(../images/bg.jpg) top left repeat; */
 	/*background: url(../images/Chemicals.jpg) no-repeat center center fixed; */
 	-webkit-background-size: cover;
@@ -11,6 +8,9 @@ body {
 	font-weight: 400;
 }
 
+#compImage {
+	text-align: center;
+}
 #search-form {
 	width: 430px;
 	height: 360px;
